--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
 <h1>Index Page</h1>
+
+<% for (var i = 0; i < articles.length; ++i) { %>
+	<h4><%= articles[i].title %></h4>
+	<img src="<%= articles[i].image %>">
+	<p><%= articles[i].content %></p>
+<% } %>
