--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<% include partials/header.ejs %>
+
 <h1>Index Page</h1>
 
 <% for (var i = 0; i < articles.length; ++i) { %>
@@ -5,3 +7,5 @@
 	<img src="<%= articles[i].image %>">
 	<p><%= articles[i].content %></p>
 <% } %>
+
+<% include partials/footer.ejs %>
