Added navbar to partial template

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,3 +7,10 @@
 	</head>
 
 	<body>
+		<div class="ui fixed inverted menu">
+			<div class="ui container">
+				<div class="header item">News Site</div>
+				<a href="/" class="item">Home</a>
+				<a href="/articles/new" class="item">New Article</a>
+			</div>
+		</div>
