--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,6 +12,9 @@
 				<p><%- article.content %></p>
 			</div>
 			<a class="ui orange inverted button" href="/articles/<%= article._id %>/edit">Edit</a>
+			<form id="deleteForm" method="POST" action="/articles/<%= article._id %>?_method=DELETE">
+				<button class="ui red inverted button">Delete</button>
+			</form>
 		</div>
 	</div>
 </div>
