--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,9 @@
 							<p><%- articles[i].content.substring(0, 200) %>...</p>
 						</div>
 						<div class="extra">	
-							<a class="ui floated blue inverted small button" href="/articles/<%= articles[i]._id %>">
+							<a class="ui floated primary basic small button" href="/articles/<%= articles[i]._id %>">
 								Read More
+								<i class="right chevron icon"></i>
 							</a>
 						</div>
 					</div>
