--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 	<body>
 		<div class="ui fixed inverted menu">
 			<div class="ui container">
-				<div class="header item">News Site</div>
+				<div class="header item"><i class="newspaper outline icon"></i>News Site</div>
 				<a href="/" class="item">Home</a>
 				<a href="/articles/new" class="item">New Article</a>
 			</div>
