--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,8 +4,18 @@
 	<div class="ui huge header">Edit <%= article.title %></div>
 	<form class="ui form" action="/articles/<%= article._id %>?_method=PUT" method="POST">
 		<div class="field">
-			<label>Article Title</label>
+			<label>Article Title*</label>
 			<input type="text" name="article[title]" value="<%= article.title %>">
+		</div>
+
+		<div class="field">
+			<label>Author*</label>
+			<input type="text" name="article[author]" value="<%= article.author %>">
+		</div>
+		
+		<div class="field">
+			<label>Category*</label>
+			<input type="text" name="article[category]" value="<%= article.category %>">
 		</div>
 
 		<div class="field">
@@ -14,7 +24,7 @@
 		</div>
 
 		<div class="field">
-			<label>Content</label>
+			<label>Content*</label>
 			<textarea name="article[content]"><%- article.content %></textarea>
 		</div>
 
