--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 					</div>
 					<div class="content">
 						<a class="header" href="/articles/<%= articles[i]._id %>"><%= articles[i].title %></a>
+						<span id="likesMeter"><%= articles[i].like %></span>
 						<div class="meta">
 							<div id="author"><strong><%= articles[i].author %></strong></div>
 							<div id="category">Category: <strong><%= articles[i].category %></strong> </div>
