--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -19,8 +19,9 @@ i.icon.newspaper.outline {
 	font-size: 2em;
 }
 
-.main.container {
+.ui.main.container {
 	margin-top: 7.0em;
+	margin-bottom: 3.0em;
 }
 
 #deleteForm {
