--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -28,7 +28,7 @@
 			<textarea name="article[content]"><%- article.content %></textarea>
 		</div>
 
-		<input type="submit" value="Submit"> 
+		<input class="ui primary basic button" type="submit" value="Submit"> 
 	</form>
 </div>
 
